--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     buildToolsVersion "28.0.1"
 
     defaultConfig {
-        applicationId "com.udacity.gradle.builditbigger"
+        applicationId "com.udacity.demur.builditbigger"
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
