--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions 'default'
+    productFlavors {
+        free {
+            applicationId "com.udacity.demur.builditbigger.free"
+            // Specifying this property is optional cause we have only one dimension
+            dimension 'default'
+        }
+        paid {
+            applicationId "com.udacity.demur.builditbigger.paid"
+            // Specifying this property is optional cause we have only one dimension
+            dimension 'default'
+        }
+    }
 }
 
 dependencies {
@@ -38,7 +52,7 @@ dependencies {
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
