--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.google.guava:guava:22.0'
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.google.guava:guava:24.1-jre'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
