--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,3 +34,7 @@ dependencies {
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     compile project(path: ':jokesJavaLib')
 }
+
+appengine {
+    tools.cloudSdkHome "C:\\Program Files (x86)\\Google\\Cloud SDK\\google-cloud-sdk\\"
+}
