fix: Define missing options needed for Google Cloud App Engine to work

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 
 appengine {
     tools.cloudSdkHome "C:\\Program Files (x86)\\Google\\Cloud SDK\\google-cloud-sdk\\"
+    deploy.projectId 'GCLOUD_CONFIG'
 }
