--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,9 @@ android {
             dimension 'default'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
