--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.google.com/' }
     }
     dependencies {
         classpath 'com.google.cloud.tools:endpoints-framework-gradle-plugin:1.0.3'
@@ -15,6 +16,8 @@ buildscript {
 repositories {
     google()
     jcenter()
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.google.com/' }
 }
 
 apply plugin: 'java'
